chore: 添加一些 composer 信息

--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,13 @@
             "email": "shiweidu@outlook.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": ">=7.0",
+        "phpunit/phpunit": "^7.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "Medz\\IdentityCard\\China\\": "src/"
+        }
+    }
 }
