--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,14 @@
     ],
     "require": {
         "php": ">=7.0",
-        "phpunit/phpunit": "^7.1"
+        "medz/gb-t-2260": "^1.0"
     },
     "autoload": {
         "psr-4": {
             "Medz\\IdentityCard\\China\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.1"
     }
 }
