--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,22 @@
         "php": ">=7.0",
         "medz/gb-t-2260": "^1.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^6.5"
+    },
     "autoload": {
         "psr-4": {
             "Medz\\IdentityCard\\China\\": "src/"
         }
     },
-    "require-dev": {
-        "phpunit/phpunit": "^7.1"
+    "autoload-dev": {
+        "psr-4": {
+            "Medz\\IdentityCard\\China\\Tests\\": "tests/"
+        }
+    },
+    "config": {
+        "platform": {
+            "php": "7.0"
+        }
     }
 }
